# moveit_saved_pose

./: CMakeLists.txt  README.md  package.xml
src/: move_to_saved_pose.cpp
srv/: MoveToSavedPose.srv
