<package>

  <name>moveit_saved_pose</name>
  <version>0.1.0</version>
  <description>
     Helper package for MoveIt which moves a given move group to a pose predefined in the SRDF (referenced by name) using a given planner.
  </description>
  <author email="t.fromm@jacobs-university.de">Tobias Fromm</author>
  <maintainer email="t.fromm@jacobs-university.de">Tobias Fromm</maintainer>

  <license>EuPL v1.2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
